# redbook

./: CMakeLists.txt  README.md
lib/vermilion/: CMakeLists.txt  README.md
lib/vermilion/src/: CMakeLists.txt
src/: 00-glfw.cpp  01-triangles.cpp  CMakeLists.txt
